tests/warn/namespace-redefinition/test.jo
namespace test  // error

type A = Int

union List[T] = Nil | Cons(head: T, tail: List[T])

def double(n: A): A = n + n
